--- a/game/n-back.html
+++ b/game/n-back.html
@@ -90,6 +90,7 @@
 <h1>N-back Brain Training</h1>
 
 <div id="game-container">
+  <a href="../game.html" class="back-link">&larr; Back to 🥨</a>
   
     <div id="instruction">
         Watch the sequence of blue squares.<br>
