--- a/game/fhe.html
+++ b/game/fhe.html
@@ -182,7 +182,8 @@ ciphertext = (a, b)</pre>
     <footer>
       <div class="card">
         <strong>Credits</strong>
-        <p class="status">Author: Interactive tutorial generator — educational toy. License: MIT (adapt freely).</p>
+        <p class="status">Yvonne's personal notes for FHE</p>
+        <p class="cite-note">Generated with assistance from ChatGPT (GPT-5), OpenAI, November 2025.</p>
       </div>
     </footer>
   </div>
