--- a/game/mastermind.html
+++ b/game/mastermind.html
@@ -228,7 +228,7 @@
 <body>
 
 <div class="game-container">
-    <a href="../game.html" class="back-link">&larr; Back to 🥨</a>
+    <a href="../snack_break.html" class="back-link">&larr; Back to 🥨</a>
     <h1>Mastermind Mini Game</h1>
     
     <div class="controls">
