--- a/game/n-back.html
+++ b/game/n-back.html
@@ -86,7 +86,7 @@
 </style>
 </head>
 <body>
-<a href="../game.html" class="back-link">&larr; Back to 🥨</a>
+<a href="../snack_break.html" class="back-link">&larr; Back to 🥨</a>
 
 <h1>N-back Brain Training</h1>
 
