--- a/FHE/fhe.html
+++ b/FHE/fhe.html
@@ -32,6 +32,7 @@
   </style>
 </head>
 <body>
+  <a href="../snack_break.html" class="back-link">&larr; Back to 🥨</a>
   <div class="container">
     <header>
       <svg width="48" height="48" viewBox="0 0 24 24" fill="none" aria-hidden>
