--- a/FHE/fhe.html
+++ b/FHE/fhe.html
@@ -33,6 +33,21 @@
 </head>
 <body>
   <a href="../snack_break.html" class="back-link">&larr; Back to 🥨</a>
+    <style>
+    .back-link {
+      display: inline-block;
+      float: left;          /* aligns to the left */
+      margin: 16px 0;       /* optional spacing from top */
+      font-size: 16px;
+      color: #0284c7;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    .back-link:hover {
+      text-decoration: underline;
+    }
+  </style>
+  
   <div class="container">
     <header>
       <svg width="48" height="48" viewBox="0 0 24 24" fill="none" aria-hidden>
