--- a/game/mastermind.html
+++ b/game/mastermind.html
@@ -229,6 +229,21 @@
 
 <div class="game-container">
     <a href="../snack_break.html" class="back-link">&larr; Back to 🥨</a>
+    <style>
+    .back-link {
+      display: inline-block;
+      float: left;          /* aligns to the left */
+      margin: 16px 0;       /* optional spacing from top */
+      font-size: 16px;
+      color: #0284c7;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    .back-link:hover {
+      text-decoration: underline;
+    }
+  </style>
+    
     <h1>Mastermind Mini Game</h1>
     
     <div class="controls">
