--- a/game/n-back.html
+++ b/game/n-back.html
@@ -87,6 +87,20 @@
 </head>
 <body>
 <a href="../snack_break.html" class="back-link">&larr; Back to 🥨</a>
+    <style>
+    .back-link {
+      display: inline-block;
+      float: left;          /* aligns to the left */
+      margin: 16px 0;       /* optional spacing from top */
+      font-size: 16px;
+      color: #0284c7;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    .back-link:hover {
+      text-decoration: underline;
+    }
+    </style>
 
 <h1>N-back Brain Training</h1>
 
