--- a/FHE/fhe.html
+++ b/FHE/fhe.html
@@ -29,8 +29,8 @@
     footer{margin-top:28px;color:var(--muted);font-size:13px;text-align:center}
     .note{background:#e0f2fe;padding:10px;border-radius:8px;color:#0369a1}
     .cite-note{margin-top:8px;font-size:11px;color:#6b7280}
-    .back-link{display:inline-block;float:left;margin:16px 0;font-size:16px;color:#0284c7;text-decoration:none;font-weight:500}
-    .back-link:hover{text-decoration:underline}
+    .back-link {position: fixed; top: 16px; left: 16px;  font-size: 16px; color: #0284c7; text-decoration: none; font-weight: 500; z-index: 1000;}
+    .back-link:hover {text-decoration: underline;}
     table{border-collapse:collapse;margin-top:12px;width:100%}
     table, th, td{border:1px solid #ccc}
     th, td{padding:6px;text-align:center}
