--- a/FHE/fhe.html
+++ b/FHE/fhe.html
@@ -206,7 +206,7 @@
     </section>
 
     <footer>
-      <p>Educational toy — MIT License. Code adapted freely for learning purposes.</p>
+      <p>Educational toy. Code adapted freely for learning purposes.</p>
       <p class="cite-note">Citations: <br>
         [1] Gentry, C. (2009). A Fully Homomorphic Encryption Scheme. <br>
         [2] Lyubashevsky, V., Peikert, C., & Regev, O. (2013). Lattice-based Cryptography.
