--- a/snack_break.html
+++ b/snack_break.html
@@ -147,7 +147,7 @@
             </p>
         </div>
         
-        <a href="fhe/fhe_tutorial.html" class="game-button">Start Learning</a>
+        <a href="FHE/fhe.html" class="game-button">Start Learning</a>
         
     </div>
 
